Final backend cleanup: removed unused test endpoints and dummy data